--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ lib-cov
 # Coverage directory used by tools like istanbul
 coverage
 *.lcov
+.idea
 
 # nyc test coverage
 .nyc_output
@@ -69,7 +70,6 @@ typings/
 .yarn-integrity
 
 # dotenv environment variables file
-.env
 .env.test
 
 # parcel-bundler cache (https://parceljs.org/)
