--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "analyze": "cross-env BUNDLE_ANALYZE=both next build",
     "analyze:server": "cross-env BUNDLE_ANALYZE=server next build",
-    "analyze:browser": "cross-env BUNDLE_ANALYZE=browser next build"
+    "analyze:browser": "cross-env BUNDLE_ANALYZE=browser next build",
+    "lint": "eslint"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +23,7 @@
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-client": "^2.6.8",
     "apollo-link-http": "^1.5.16",
+    "cross-env": "^7.0.0",
     "dotenv": "^8.2.0",
     "graphql": "^14.6.0",
     "isomorphic-unfetch": "^3.0.0",
@@ -36,8 +38,19 @@
     "@types/node": "^13.5.3",
     "@types/react": "^16.9.19",
     "@types/styled-components": "^4.4.2",
+    "@typescript-eslint/eslint-plugin": "^2.18.0",
+    "@typescript-eslint/parser": "^2.18.0",
+    "@typescript-eslint/typescript-estree": "^2.18.0",
     "@welldone-software/why-did-you-render": "^4.0.0",
     "@zeit/next-bundle-analyzer": "^0.1.2",
+    "babel-eslint": "^10.0.3",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.18.2",
+    "eslint-plugin-react-hooks": "^2.3.0",
+    "prettier": "^1.19.1",
     "typescript": "^3.7.5"
   }
 }
